--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,8 +8,8 @@
 <body class="before">
     <div class="login">
         <div class="links">
-            <a href="{{ url_for('register') }}">Register</a>
-            <a class="active"href="{{ url_for('index') }}">Login</a>
+            <a href="register.html">Register</a>
+            <a class="active"href="index.html">Login</a>
         </div>       
         <form id="loginForm" method="POST" action="{{ url_for('index') }}">
             <div class="tabContent">
