--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -9,8 +9,8 @@
 <body class="before">
     <div class="register">
         <div class="links">
-            <a class="active"href="{{ url_for('register') }}">Register</a>
-            <a href="{{ url_for('index') }}">Login</a>
+            <a class="active"href="register.html">Register</a>
+            <a href="index.html">Login</a>
         </div>
         
         <form id="regForm" method="POST" action="{{ url_for('register') }}">
