--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,7 +11,7 @@
             <a href="register.html">Register</a>
             <a class="active"href="index.html">Login</a>
         </div>       
-        <form id="loginForm" method="POST" action="{{ url_for('index') }}">
+        <form id="loginForm" method="POST" action="index.html">
             <div class="tabContent">
 
                 <label for="email">
