--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -13,7 +13,7 @@
             <a href="index.html">Login</a>
         </div>
         
-        <form id="regForm" method="POST" action="{{ url_for('register') }}">
+        <form id="regForm" method="POST" action="register.html">
             <div class="tabContent">
                 
                 <label for="email">
