--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -29,7 +29,7 @@
                 <label for="username">
 					<i class="fas fa-user"></i>
 				</label>
-                <input type="text"id="ic"name="ic" placeholder="NRIC" required>
+                <input type="text"id="ic"name="ic" placeholder="username" required>
                 
                 <div class="tabSubmitBtn">
                     <button type="submit">REGISTER</button>
