--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -8,6 +8,8 @@
 
 </head>
 <body class="before">
+        <!-- Need to change all the curly bracket -->
+
     <div class="register">
         <div class="links">
             <a class="active"href="{{ url_for('register') }}">Register</a>
@@ -31,12 +33,13 @@
 					<i class="fas fa-user"></i>
 				</label>
                 <input type="text"id="ic"name="ic" placeholder="NRIC" required>
-                
+                <!-- Delete for react -->
                 {% if message  %}
                 <div class="alert" role="alert">
                     <li>{{ message }}</li>
                 </div>
                 {% endif %}
+                <!-- Delete for react -->
                 <div class="tabSubmitBtn">
                     <button type="submit">REGISTER</button>
             </div>
